--- a/AetreusBot/pom.xml
+++ b/AetreusBot/pom.xml
@@ -41,5 +41,12 @@
     	<artifactId>slf4j-simple</artifactId>
     	<version>1.7.25</version>
 	</dependency>
+	
+	<dependency>
+	  <groupId>com.eclipsesource.minimal-json</groupId>
+	  <artifactId>minimal-json</artifactId>
+	  <version>0.9.5</version>
+	</dependency>
+	
   </dependencies>
 </project>
